kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app # Ensure correct namespace
  annotations:
    # This annotation is important for WebSockets (SignalR)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # Use this to tell ingress-nginx that the backend service uses websockets
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Add annotation to specify the issuer
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  # TLS configuration for self-signed certificate
  tls:
    - hosts:
      - todo-app.10.1.8.174.nip.io
      secretName: todo-tls
  rules:
    - host: todo-app.10.1.8.174.nip.io
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          - path: /todohub # Path for your SignalR hub
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
